fix: horizontal scroll and code refactor

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 .container {
-  max-width: 65rem;
+  max-width: 60rem;
   margin: 0 auto;
   width: 100%;
   padding: 2rem 1rem;
@@ -14,37 +14,36 @@
 
 
 .btn-value {
-
   background-color: var(--color-primary);
   border-style: none;
-  padding: 1rem;
+  border: 1px solid;
   color: white;
+  padding: 1rem;
   border-radius: 5px;
   cursor: pointer;
-
 }
+
 
 .btn-goBack {
-
   padding: 0.6rem;
   border-style: none;
-  background-color: var(--grey-2);
+  border: 1px solid;
+  background-color: var(--grey-1);
   border-radius: 5px;
   cursor: pointer;
-
-
 }
 
-.btn-start {
 
+
+.btn-start {
   background-color: var(--color-primary);
   padding: 0.7rem;
   border-style: none;
   color: white;
   border-radius: 5px;
   cursor: pointer;
-
 }
+
 
 @media (max-width: 900px){
 
