--- a/src/Components/Dashboard/dashboard.css
+++ b/src/Components/Dashboard/dashboard.css
@@ -1,7 +1,7 @@
 header {
   height: 90px;
   width: 100%;
-  background-color: var(--grey-1);
+  background-color: var(--color-primary-2);
   box-shadow:  0px 3px 5px 0px rgba(134,142,150,1);
 }
 
@@ -32,13 +32,13 @@ header {
 
 .div-top {
   height: 65%;
-  border: 1px solid var(--grey-2);
+  border: 1px solid;
   border-radius: 5px;
   background-color: var(--grey-1);
 }
 
 .div-bottom {
-  border: 1px solid var(--grey-2);
+  border: 1px solid;
   border-radius: 5px;
   padding: 2rem 1rem;
   display: flex;
@@ -69,7 +69,6 @@ form {
 }
 
 input , select {
-
   padding: 0.7rem 0.5rem;
   border-radius: 5px;
   background-color: var(--grey-1);
@@ -78,14 +77,12 @@ input , select {
 
 
 .div-value {
-
   display: flex;
   justify-content: space-between;
 
 }
 
 ul {
-
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -93,9 +90,13 @@ ul {
   max-height: 460px;
 }
 
+ul > h2 {
+  border-bottom: 3px solid;
+  text-align: center;
+}
+
 
 li {
-
   background-color: var(--grey-1);
   padding: 1rem;
   border-radius: 5px;
@@ -106,34 +107,38 @@ li {
 }
 
 .list-income {
-
   border-left: 4px solid var(--color-secondary);
 
 }
 
 .list-outcome {
-
-  border-left: 4px solid var(--grey-2);
+  border-left: 4px solid darkred;
 
 }
 
-.trash {
 
+.trash {
   padding: 6px;
   border-style: none;
   cursor: pointer;
 }
 
 .div-li {
-
- 
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  border-bottom: 1px solid;
 
 }
 
+.p-type {
+  padding: 0.1rem 0.3rem;
+  background-color: var(--grey-2);
+  text-align: center;
+}
 
-
+.noitem-img {
+  width: 90%;
+}
 
 @media (max-width: 900px){
 
